# mkdocs-doubleslash-theme

./: .dockerignore  404.html  CHANGELOG.md  Dockerfile  README.md  index.html  local-preview  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml
docs/: index.md
mkdocs_doubleslash_theme/: plugin.py
mkdocs_doubleslash_theme/assets/javascripts/: content-width-toggle.js  toc-collapse-toggle.js
mkdocs_doubleslash_theme/assets/stylesheets/: mkdocs-doubleslash-theme.css
mkdocs_doubleslash_theme/overrides/partials/: content-width-toggle.html  header.html  palette.html  toc-collapse-toggle.html  top.html
search/: search_index.json
